--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@radix-ui/react-visually-hidden": "^1.1.2",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.50.2",
     "@tabler/icons-react": "^3.22.0",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-table": "^8.20.5",
